# docklitewsl

./: .gitignore  LICENSE  README.md
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
