[package]
name = "docklite-wsl"
version = "0.1.0"
description = "A lightweight WSL Docker management desktop dashboard"
authors = ["Antigravity"]
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
